--- a/views/menu.html
+++ b/views/menu.html
@@ -1,3 +1,18 @@
 {{ define "menu" }}
-
+<header>
+  <h1>{{ .Subtitle }} </h1>
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+</header>
+<aside>
+  <ul>
+    <li>Dashboard</li>
+    <li>Generate password</li>
+  </ul>
+</aside>
 {{ end }}
