--- a/views/footer.html
+++ b/views/footer.html
@@ -1,3 +1,8 @@
-{{ define "footer" }}
-
+{{ define "footer" }}  
+{{ template "js" . }}
+<footer>
+  <p>Derechos de autor &copy; 2023 GenPwd</p>
+</footer>
+</body>
+</html>
 {{ end }}
